// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropMenuButton default 1`] = `
<div
  className="sc-gPEVay bSVfGR"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "backgroundColor": "#4d63ff",
      "borderBottomColor": "#4d63ff",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#4d63ff",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#4d63ff",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#4d63ff",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "color": "#ffffff",
      "height": "3.2rem",
    }
  }
>
  <input
    className="sc-iRbamj gSSfme"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-jlyJG gDwgBL"
  >
    <div
      className="sc-hzDkRC bCNFoS"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    />
    <i
      className="lugia-icon-direction_down   sc-VigVT bZGqSI"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
          "paddingBottom": "0rem",
          "paddingLeft": "0.6rem",
          "paddingRight": "0rem",
          "paddingTop": "0rem",
        }
      }
    />
  </div>
</div>
`;

exports[`DropMenuButton divided={false} 1`] = `
<div
  className="sc-gPEVay bSVfGR"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "backgroundColor": "#4d63ff",
      "borderBottomColor": "#4d63ff",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#4d63ff",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#4d63ff",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#4d63ff",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "color": "#ffffff",
      "height": "3.2rem",
    }
  }
>
  <input
    className="sc-iRbamj gSSfme"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-jlyJG gDwgBL"
  >
    <div
      className="sc-hzDkRC bCNFoS"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    />
    <i
      className="lugia-icon-direction_down   sc-VigVT bZGqSI"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
          "paddingBottom": "0rem",
          "paddingLeft": "0.6rem",
          "paddingRight": "0rem",
          "paddingTop": "0rem",
        }
      }
    />
  </div>
</div>
`;

exports[`DropMenuButton type=basic 1`] = `
<div
  className="sc-gPEVay bSVfGR"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(0,0,0,0)",
      "backgroundImage": "none",
      "borderBottomWidth": 0,
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderTopWidth": 0,
      "color": "#4d63ff",
      "height": "3.2rem",
    }
  }
>
  <input
    className="sc-iRbamj gSSfme"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-jlyJG gDwgBL"
  >
    <div
      className="sc-hzDkRC bCNFoS"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    />
    <i
      className="lugia-icon-direction_down   sc-VigVT bZGqSI"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
          "paddingBottom": "0rem",
          "paddingLeft": "0.6rem",
          "paddingRight": "0rem",
          "paddingTop": "0rem",
        }
      }
    />
  </div>
</div>
`;

exports[`DropMenuButton type=primary,divided={true} 1`] = `
<div
  className="sc-csuQGl eauwPn"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "height": "3.2rem",
    }
  }
  type="primary"
>
  <span
    checked={false}
    className="sc-fBuWsC hcHywv"
    disabled={false}
    type="primary"
  />
  <div
    className="sc-Rmtcm cTaZul"
  >
    <div
      checked={false}
      className="sc-bRBYWo dEFMCV"
      disabled={false}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderBottomColor": "#d0d3da",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0.1rem",
          "borderLeftColor": "#d0d3da",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "borderTopColor": "#d0d3da",
          "borderTopStyle": "solid",
          "borderTopWidth": "0.1rem",
          "color": "#363B40",
          "fontSize": "1.4rem",
        }
      }
      type="primary"
    >
      <input
        className="sc-iRbamj gSSfme"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </div>
    <span
      checked={false}
      className="sc-jhAzac fVFFSj"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderBottomColor": "#d0d3da",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0.1rem",
          "borderRightColor": "#d0d3da",
          "borderRightStyle": "solid",
          "borderRightWidth": "0.1rem",
          "borderTopColor": "#d0d3da",
          "borderTopStyle": "solid",
          "borderTopWidth": "0.1rem",
          "color": "#9EA4AE",
        }
      }
      type="primary"
    >
      <input
        className="sc-iRbamj gSSfme"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down   sc-VigVT jbKUDW"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "fontSize": "1.4rem",
          }
        }
      />
    </span>
  </div>
</div>
`;
